--- a/app.css
+++ b/app.css
@@ -2,4 +2,158 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  --very-dark-blue: hsl(233, 47%, 7%);
+  --dark-desaturated-blue: hsl(244, 38%, 16%);
+  --soft-violet: hsl(277, 64%, 61%);
+  --slightly-transparent-white-main: hsla(0, 0%, 100%, 0.75);
+  --slightly-transparent-white-headings: hsla(0, 0%, 100%, 0.6);
+  --Lexend-Deca: "Lexend Deca", sans-serif;
+  --Inter: "Inter", sans-serif;
+}
+
+body {
+  background-color: var(--very-dark-blue);
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  padding: 2rem 0 2rem 0;
+  font-size: 15px;
+}
+
+main {
+  background-color: var(--dark-desaturated-blue);
+  max-width: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: var(--Lexend-Deca);
+  text-align: center;
+  border-radius: 0.6rem;
+  /* max-width: 550px; */
+}
+
+#desktop-image {
+  display: none;
+}
+#mobile-image {
+  max-width: 100%;
+  border-radius: 0.6rem 0.6rem 0 0;
+}
+
+#text-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  gap: 2rem;
+  margin: 2rem;
+  font-family: var(--Inter);
+  color: var(--slightly-transparent-white-main);
+}
+
+h1 {
+  font-size: 1.9em;
+  margin: -1rem;
+  font-weight: 700;
+  color: white;
+}
+
+h1 span {
+  color: var(--soft-violet);
+}
+
+#informations div {
+  color: var(--slightly-transparent-white-main);
+  line-height: 1.7rem;
+  margin-bottom: 1.5rem;
+}
+
+#informations div::first-line {
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 700;
+}
+
+#informations div:last-of-type {
+  margin-bottom: 0;
+}
+
+#informations span {
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-family: var(--Inter);
+  letter-spacing: 1px;
+}
+
+.attribution {
+  margin-top: 2rem;
+  font-weight: 700;
+}
+
+.attribution a {
+  text-decoration: none;
+}
+
+@media (min-width: 540px) {
+  main {
+    max-width: 467px;
+  }
+}
+
+@media (min-width: 1295px) {
+  body {
+    max-width: 1440px;
+    margin: 0;
+    padding: 0;
+  }
+
+  main {
+    flex-direction: row-reverse;
+    max-width: 79%;
+    align-content: center;
+    margin: 0;
+    padding: 0;
+    flex-basis: 50%;
+  }
+
+  #text-box {
+    padding: 4rem 6em 3rem 3rem;
+    align-content: center;
+    gap: 4rem;
+    text-align: left;
+    margin: 0;
+  }
+
+  #informations {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  #mobile-image {
+    display: none;
+  }
+
+  #desktop-image {
+    display: block;
+    max-width: 100%;
+    border-radius: 0 0.6rem 0.6rem 0;
+  }
+
+  h1 {
+    font-size: 2.3rem;
+  }
+  p {
+    font-size: 1.2em;
+  }
+
+  #informations div {
+    margin-bottom: 0;
+  }
 }
