--- a/app2.css
+++ b/app2.css
@@ -13,35 +13,131 @@
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0;
 }
 
 main {
-  border: 1px black solid;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-direction: column;
-  flex: 0 1 auto;
-  gap: 2rem;
+  margin: 0 auto;
+  width: 85%;
+  margin-top: auto;
+  margin-bottom: auto;
+  background-color: var(--very-dark-blue);
+  max-width: 600px;
+  border-radius: 0.7rem;
 }
 
-#text-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 0 1 auto;
+#text-box,
+#informations,
+#mobile-image {
   text-align: center;
+  margin: 0 auto;
+  width: 80%;
 }
 
 #desktop-image {
   display: none;
 }
+
 #mobile-image {
-  max-width: 100%;
-  border-radius: 0.6rem 0.6rem 0 0;
+  min-width: 100%;
+  margin: 0 auto;
+  display: block;
+  padding-bottom: 1.8rem;
+  border-radius: 0.7rem;
+}
+
+/* #text-box {
+  padding-bottom: 1rem;
+} */
+
+h1 {
+  padding-bottom: 1rem;
+  color: white;
+  font-family: var(--Inter);
+  font-size: 1.7rem;
+}
+
+h1 span {
+  color: var(--soft-violet);
+}
+
+p {
+  padding-bottom: 2rem;
+  color: var(--slightly-transparent-white-main);
+  font-family: var(--Lexend-Deca);
+  line-height: 1.5rem;
+}
+
+#informations div {
+  padding-bottom: 2rem;
+  color: var(--slightly-transparent-white-main);
+  font-family: inter;
+}
+
+#informations div::first-line {
+  color: white;
+  font-family: var(--Inter);
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+#informations div:last-of-type {
+  padding-bottom: 2.4rem;
+}
+
+.attribution {
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+.attribution a {
+  text-decoration: none;
+}
+
+@media (min-width: 1000px) {
+  main {
+    display: flex;
+    max-width: 1100px;
+    flex-direction: row-reverse;
+  }
+
+  #mobile-image {
+    display: none;
+  }
+
+  #desktop-image {
+    display: block;
+    max-width: 50%;
+  }
+
+  #text-box {
+    margin: auto;
+    padding-left: 4rem;
+    padding-right: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: start;
+  }
+
+  #informations {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    text-align: start;
+  }
+
+  #informations div,
+  #informations div:last-of-type {
+    padding: 2rem 0 0 0;
+  }
+
+  .attribution {
+    font-size: 1rem;
+  }
 }
