--- a/app2.css
+++ b/app2.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 2rem 0;
+  background-color: var(--very-dark-blue);
 }
 
 main {
@@ -24,9 +25,9 @@ main {
   width: 85%;
   margin-top: auto;
   margin-bottom: auto;
-  background-color: var(--very-dark-blue);
   max-width: 600px;
   border-radius: 0.7rem;
+  background-color: var(--dark-desaturated-blue);
 }
 
 #text-box,
@@ -35,6 +36,15 @@ main {
   text-align: center;
   margin: 0 auto;
   width: 80%;
+}
+#mobile-image,
+#desktop-image {
+  filter: sepia(100%) brightness(51%) hue-rotate(233deg) saturate(223%)
+    contrast(106%);
+  -webkit-filter: sepia(100%) brightness(51%) hue-rotate(233deg) saturate(223%)
+    contrast(106%);
+  -moz-filter: sepia(100%) brightness(51%) hue-rotate(233deg) saturate(223%)
+    contrast(106%);
 }
 
 #desktop-image {
@@ -48,10 +58,6 @@ main {
   padding-bottom: 1.8rem;
   border-radius: 0.7rem;
 }
-
-/* #text-box {
-  padding-bottom: 1rem;
-} */
 
 h1 {
   padding-bottom: 1rem;
@@ -92,6 +98,8 @@ p {
   font-weight: 700;
   letter-spacing: 1px;
   font-size: 0.8rem;
+  padding-top: 3rem;
+  color: var(--slightly-transparent-white-main);
 }
 
 .attribution a {
@@ -124,6 +132,10 @@ p {
     text-align: start;
   }
 
+  #text-box p {
+    padding-top: 2rem;
+  }
+
   #informations {
     width: 100%;
     margin: 0;
@@ -139,5 +151,49 @@ p {
 
   .attribution {
     font-size: 1rem;
+    padding-top: 3rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  #informations div::first-line {
+    font-size: 1.3rem;
+  }
+
+  p,
+  #informations div {
+    font-size: 0.8rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  h1 {
+    font-size: 1.7rem;
+  }
+
+  #informations div::first-line {
+    font-size: 1.5rem;
+  }
+
+  p,
+  #informations div {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 2.2rem;
+  }
+
+  #informations div::first-line {
+    font-size: 1.8rem;
+  }
+
+  p,
+  #informations div {
+    font-size: 1.2rem;
   }
 }
