--- a/app2.css
+++ b/app2.css
@@ -94,6 +94,11 @@ p {
   padding-bottom: 2.4rem;
 }
 
+#informations span {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+
 .attribution {
   font-weight: 700;
   letter-spacing: 1px;
@@ -104,6 +109,7 @@ p {
 
 .attribution a {
   text-decoration: none;
+  color: var(--soft-violet);
 }
 
 @media (min-width: 1000px) {
@@ -177,6 +183,14 @@ p {
     font-size: 1.5rem;
   }
 
+  #informations span {
+    font-size: 0.9rem;
+  }
+
+  p {
+    line-height: 2.1rem;
+  }
+
   p,
   #informations div {
     font-size: 1rem;
@@ -195,5 +209,9 @@ p {
   p,
   #informations div {
     font-size: 1.2rem;
+  }
+
+  #informations span {
+    font-size: 1rem;
   }
 }
